--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -1,5 +1,6 @@
 header#top-bar {
   position: sticky;
+  z-index: 1;
   top: 0;
   height: 64px;
   width: 100%;
